[BUGFIX] Wrong position for checkboxes in inspector add ons
This can be seen in the image editor e.g.

Reviewed-on: https://review.typo3.org/25107
Tested-by: Aske Ertmann
Tested-by: Mr. Hudson
Tested-by: Dominique Feyer
Tested-by: Sebastian Kurfuerst
Original-Commit-Hash: 1edc4701d08f359d7d455ada661e6836b8be4c22

--- a/TYPO3.Neos/Resources/Private/Styles/Inspector/_Inspector.scss
+++ b/TYPO3.Neos/Resources/Private/Styles/Inspector/_Inspector.scss
@@ -434,6 +434,7 @@
 			padding: 9px;
 			min-width: $unit + 1px;
 			text-align: center;
+			position: relative;
 			@include border-radius(0);
 			@include box-sizing(border-box);
 
@@ -444,6 +445,10 @@
 
 			input {
 				margin: 0;
+			}
+
+			input[type=checkbox] + span:before {
+				top: $relatedMargin + 1px;
 			}
 		}
 
